--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
                          <div class="icon-bar">
-                                <a class="active" href="https://twitter.com/bosslu0420?lang=en" target="_blank"><img class="iconpic" src="images/if_linkedin_2308061.png"></a> 
-                                <a class="active" href="https://www.facebook.com/Luhan.Official/" target="_blank"><img class="iconpic" src="images/if_facebook_2308066.png"></a> 
-                                <a class="active" href="https://en.wikipedia.org/wiki/Lu_Han" target="_blank"><img class="iconpic" src="images/if_wordpress_2308140.png"></a> 
+                                <a class="active" href="https://twitter.com/bosslu0420?lang=en" target="_blank"><img class="iconpic" width="60px" src="images/if_linkedin_2308061.png"></a> 
+                                <a class="active" href="https://www.facebook.com/Luhan.Official/" target="_blank"><img class="iconpic" width="60px" src="images/if_facebook_2308066.png"></a> 
+                                <a class="active" href="https://en.wikipedia.org/wiki/Lu_Han" target="_blank"><img class="iconpic" width="60px" src="images/if_wordpress_2308140.png"></a> 
          
                          </div>
 
