--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="aboutme">
 	                    <h3>About Me</h3>
                         <hr>
-                         <img class="luhanpic" src="images/luhan1.PNG" alt="Luhan picture">
+                         <img class="luhanpic" src="../images/luhan1.png" alt="Luhan picture">
                          <div class="introduction">
                              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis eos nihil aliquam saepe cupiditate alias neque! Iure, eaque exercitationem libero ipsam hic aspernatur nihil accusamus vel, explicabo asperiores, itaque dignissimos?</p>
 
